refactor(repository): 重构仓储框架实现简化依赖注入机制
- 移除 RepositoryBeanPostProcessor，改为通过 @Autowired 自动注入 Delegate
- 删除 DelegateFor 注解，简化仓储配置方式
- 新增 CqrsRepositoryFacade 支持读写分离模式
- 移除调度子系统相关配置类 AutoScheduleConfiguration
- 更新 ElasticsearchRepositoryDelegate 支持泛型 Entity/PO 转换
- 调整 AbstractUserRepositoryImpl 不再直接继承带 PO 泛型的基类
- 修改仓储框架自动配置移除复杂的后处理器机制